--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@types/node": "18.0.1",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1",
     "typescript": "4.7.4"
   }
 }
